# VEGA_STM_ESP32_Flashing_2023

./: README.md
final_code/advanced_https_ota/main/: CMakeLists.txt  FileHandle.h  HTTP_MQTT_WIFI.h  Kconfig.projbuild  PN532.h  advanced_https_ota_example2.cpp  bt_inter.h  ca_cert_1.c  ca_cert_1.h  component.mk  development  flash.h  ping.c  ping.h  rahal_crc.h  rahal_spiffs.h  serialCom.h  stm32_firmup.h
final_code/advanced_https_ota/main/components/lora/include/: lora.c  lora.h
final_code/advanced_https_ota/main/crypto/: AES.h  AES128.cpp  AES192.cpp  AES256.cpp  AESCommon.cpp  BlockCipher.cpp  Crypto.cpp  Crypto.h  Speck.cpp  Speck.h  SpeckSmall.cpp  SpeckSmall.h  SpeckTiny.cpp  SpeckTiny.h
final_code/advanced_https_ota/main/crypto/examples/TestAES/: TestAES.ino
final_code/advanced_https_ota/main/crypto/examples/TestBLAKE2b/: TestBLAKE2b.ino
final_code/advanced_https_ota/main/crypto/examples/TestBLAKE2s/: TestBLAKE2s.ino
final_code/advanced_https_ota/main/crypto/examples/TestCBC/: TestCBC.ino
final_code/advanced_https_ota/main/crypto/examples/TestCFB/: TestCFB.ino
final_code/advanced_https_ota/main/crypto/utility/: ProgMemUtil.h
final_code/advanced_https_ota/main/esp_idf_lora/: RH_98.cpp  RH_98.h  lora_datagram.cpp  lora_datagram.h  lora_encrypted_driver.cpp  lora_encrypted_driver.h  lora_generic_driver.cpp  lora_generic_driver.h  lora_generic_spi.cpp  lora_generic_spi.h  lora_reliable_datagram.cpp  lora_reliable_datagram.h  lora_spi_driver.cpp  lora_spi_driver.h  spi_hardware.cpp  spi_hardware.h
main/: stm32_bin.h
py_write_h/: bin_to_h.txt  (+4 more)
(+14 files in other folders)
